fixed z-index

--- a/style.css
+++ b/style.css
@@ -105,7 +105,7 @@ i {
     }
     .right {
         margin: 13.5em auto auto 3em;
-        z-index: -1;
+        z-index: 0;
     }
     h1 {
         text-align: left;
